[package]
name = "socks5rs"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/thehxdev/socks5rs"
authors = [ "Hossein Khosravi <hossein.khosravi.ce@gmail.com>" ]
description = "Minimal, Low-Level and simple socks5 protocol implementation"

[lib]
crate-type = ["lib"]

[dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "server"
